# hatchet_dna_workflow

./: .gitignore  conftest.py  pyproject.toml
hatchet_dna_workflow/: __init__.py  hatchet_client.py  main.py
hatchet_dna_workflow/workers/: dna_batch_preprocessing_workflow_worker.py  dna_workflow_worker_cpu.py  dna_workflow_worker_gpu.py  hatchet_step_processing_with_result_worker.py
hatchet_dna_workflow/workflows/: __init__.py  dna_batch_preprocessing_workflow.md  dna_batch_preprocessing_workflow.py  dna_workflow.py  hatchet_step_processing_with_result.py  preprocess_workflow_updated.py
hatchet_sample/: __init__.py  main.py
hatchet_sample/workers/: dna_batch_preprocessing_workflow_worker.py  dna_workflow_worker_cpu.py  dna_workflow_worker_gpu.py
hatchet_sample/workflows/: __init__.py  dna_batch_preprocessing_workflow.md  dna_batch_preprocessing_workflow.py  dna_workflow.py
tests/: test_dag.py
